# phprs

./: .gitignore  Cargo.toml  README.md  ROADMAP.md
.examples/multifile/App/Models/: Entity.php  Product.php  User.php
.examples/multifile/App/Services/: ProductService.php  UserService.php
.examples/oop/: oop_method.php  oop_polymorphism.php  oop_test.php
.examples/primitive/: attributes.php  class_attr.php  class_function.php  closures.php  inline_simple.php  method_attr.php  namespace_example.php  simple_attr.php  types.php
.examples/stdlib/: intrinsics_demo.php  runtime_test.php
compiler/: Cargo.toml
compiler/src/: lib.rs  stdlib.rs
compiler/src/ast/: attribute.rs  expr.rs  namespace.rs  oop.rs  stmt.rs  types.rs
compiler/src/codegen/: class.rs  mod.rs
compiler/src/lexer/: mod.rs
compiler/src/parser/: namespace.rs
compiler/src/resolver/: dependency_graph.rs  file_resolver.rs  symbol_table.rs
compiler/src/types/: class_registry.rs  stmt.rs
examples/: array_test.php  concat_test.php  fibonacci.php  function_test.php  hello.php  inline_function.php  loops.php  oop_basic.php  oop_constructor.php  oop_inheritance.php  oop_inheritance2.php  oop_method.php  oop_parent_call.php  oop_polymorphism.php  oop_property.php  oop_simple.php  oop_static.php  oop_static2.php  oop_test.php  oop_vtable_simple.php  ownership.php  ownership_error.php  single_inheritance.php  static_test.php  trait_example.php  types.php
examples/multifile/: main.php
examples/oop/: oop_basic.php  oop_static.php  oop_static2.php
examples/primitive/: exceptions.php  inline_function_simple.php  inline_typed.php  loops.php  static_test.php
examples/stdlib/: intrinsics_libc.php  stdlib_test.php
runtime/: Cargo.toml
runtime/benches/: arena_bench.rs  array_bench.rs  http_bench.rs  json_bench.rs  string_bench.rs
runtime/src/: arena.rs  intern.rs  lib.rs  math.rs  simd.rs  types.rs
runtime/src/array/: mod.rs  value.rs
runtime/src/fs/: error.rs  handle.rs  mod.rs  ops.rs
runtime/src/http/: headers.rs  method.rs  mod.rs  parser.rs  request.rs  response.rs  server.rs  status.rs
runtime/src/json/: decode.rs  encode.rs  error.rs  mod.rs  simd.rs
runtime/src/string/: mod.rs  ops.rs
src/: lib.rs  main.rs  stdlib.rs
src/ast/: attribute.rs  expr.rs  mod.rs  namespace.rs  oop.rs  stmt.rs  types.rs
src/codegen/: class.rs  function.rs  mod.rs
src/errors/: mod.rs
src/lexer/: mod.rs  token.rs
src/ownership/: mod.rs
src/parser/: class.rs  expr.rs  mod.rs  namespace.rs  stmt.rs
src/resolver/: dependency_graph.rs  file_resolver.rs  mod.rs  symbol_table.rs
src/types/: class_registry.rs  expr.rs  mod.rs  stmt.rs
stdlib/: array.php  datetime.php  file.php  hash.php  index.php  json.php  math.php  output.php  string.php  type.php
