[package]
name = "phprs"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "PHP syntax + Rust semantics compiler with Cranelift backend"

[[bin]]
name = "phprs"
path = "src/main.rs"

[dependencies]
# Runtime library (from workspace)
phprs-runtime = { path = "../runtime" }

# Cranelift for code generation
cranelift = "0.116"
cranelift-module = "0.116"
cranelift-object = "0.116"
cranelift-native = "0.116"
target-lexicon = "0.12"

# CLI and errors
clap = { version = "4", features = ["derive"] }
thiserror = "2"
miette = { version = "7", features = ["fancy"] }

# Lexer
logos = "0.14"

[lints]
workspace = true
