[package]
name = "phprs-runtime"
version = "0.1.0"
edition = "2021"
description = "High-performance runtime for PHPRS compiler"

[lib]
crate-type = ["staticlib", "rlib"]

[dependencies]
lazy_static = "1.4"
itoa = "1.0"
ryu = "1.0"

[dev-dependencies]
criterion = "0.5"
serde_json = "1.0"

[[bench]]
name = "string_bench"
harness = false

[[bench]]
name = "arena_bench"
harness = false

[[bench]]
name = "array_bench"
harness = false

[[bench]]
name = "json_bench"
harness = false

[[bench]]
name = "http_bench"
harness = false

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
